可以打包成功，但模块化的方式运行后却是unnamed module，与直接删除module-info.java没区别好像。后续试试在Spring Boot 3.x会不会有变化