@@ -180,6 +180,12 @@ Caused by: java.lang.module.InvalidModuleDescriptorException: Provider class xxx
 
 - 经简单验证，若无无法module化的依赖，是可以启动成功的
 - 另，若删除主启动类的module-info.java，以未命名模块的方式来运行，也是一种方式，这算是对Java 9之前的一个兼容
+- 2022-07-06更新：
+    - 打包报错在使用maven-jar-plugin从jar中剔除配置文件时出现，若不从中剔除则可正常打包
+    - 基于加载规则，外置的配置项会覆盖内置的，所以对正常使用影响不大，一般active不同的profiles，且往往通过配置中心获取配置
+    - 当前模块化部署未找到外置依赖的方式，使用 `-Dloader.path=lib` 会报类找不到
+    - 打包可正常运行，虽似乎的确是模块化的方式（因该不是，这就更奇怪了，module-info.java也有打进去，等Spring Boot 3.x吧），但从内部获取Module却是unnamed module不是很理解，
+      因为之前unnamed module应该需要加 `--add-opens java.base/java.lang=ALL-UNNAMED` （又试了一下，不加也行，忘了怎么配置导致的不需要加这个了）
 
 IDEA中，两种启动方式的启动参数，另通过查看VM参数，module模式中有`--module-path`属性
 
